--- a/miniprogram/mylibrary/dashed/dashed.wxss
+++ b/miniprogram/mylibrary/dashed/dashed.wxss
@@ -1,7 +1,8 @@
 .border-dashed{
-  padding: 50rpx;
-  border: 4rpx dashed #999999;
+  padding: 50rpx 80rpx;
+  border: 2rpx dashed #cccccc;
   color: #999999;
-  font-size: 30rpx;
-  text-align: justify;
+  font-size: 24rpx;
+  text-align: center;
+  line-height: 1.5;
 }
