--- a/miniprogram/pages/addItem/addItem.wxss
+++ b/miniprogram/pages/addItem/addItem.wxss
@@ -1,6 +1,6 @@
 /* pages/addItem/addItem.wxss */
 page{
-  background-color: #fcfcfc;
+  background-color: #f6f6f6;
 }
 
 /* 项目标题 */
@@ -94,7 +94,7 @@ page{
   height: 60rpx;
   border-radius: 50%;
   box-sizing: border-box;
-  opacity: 0.5;
+  opacity: 0.2;
 }
 .item-color-list .cur{
   opacity: 1;
