--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -6,12 +6,11 @@
     <!-- 插入一个名字叫做before的slot节点，该节点有自己的样式 -->
     <open-data slot="before" class="notice" type="userNickName"></open-data>
   </dashed-tips>
-  
 </view>
 
 <!-- 如果用户已经有添加过倒数日项，则显示倒数日项 -->
 <view class="item-list" wx:if="{{itemList.length}}">
-  <block wx:for="{{itemList}}" wx:key="{{index}}">
+  <block wx:for="{{itemList}}" wx:key="index">
     <view class="item {{item.isPast ? 'item-past' : ''}} {{ itemLongPress == index ? 'long-press' : '' }}"
      data-_id="{{item._id}}"
      bind:tap="itemEdit"
