--- a/miniprogram/pages/expired/expired.wxss
+++ b/miniprogram/pages/expired/expired.wxss
@@ -1,4 +1,4 @@
-/* pages/index/index.wxss */
+/* pages/expired/expired.wxss */
 page{
   background-color: #f6f6f6;
   padding: 0 1.5%;
@@ -18,15 +18,12 @@ page{
 /* 添加按钮 */
 .index-buttonwrap{
   position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 5%;
+  right: 5%;
+  bottom: 200rpx;
   display: inline-block;
-  padding: 0 10rpx;
-  background-color: #fff;
-  box-shadow: 0 0 10rpx rgba(199, 188, 188, .5);
-  border-radius: 37.5rpx;
-} 
+  box-shadow: 0 0 20rpx rgba(0 ,0 ,0 , 0.3);
+  border-radius: 50%;
+}
 
 /* 项目列表 */
 .item-list{
@@ -49,7 +46,7 @@ page{
   box-shadow: 0 0 20rpx rgba(0, 0, 0, 0.05);
 }
 .item-list .item-past{
-  opacity: 1;
+  opacity: 0.4;
 }
 .item-list .top-color{
   width: 100%;
